# OCHA

./: .gitignore  README.md  TODO.md  alignment.py  alignment_analysis.ipynb  app.py  bias.py  biases_eda.ipynb  charts.py  chat.py  claude-instructions.md  claude_chat.py  data.py  limitations.md  main.py  media.py  news_analysis.ipynb  ocha_eda.ipynb  pyproject.toml  scoring.py  stroopwafel.ipynb  stroopwafel_integrated.ipynb
data/: Data_ CERF Donor Contributions and Allocations - allocations.csv  Data_ CERF Donor Contributions and Allocations - contributions.csv  Data_ Country Based Pooled Funds (CBPF) - Contributions.csv  cerf_allocations_cleaned.csv  country_year_severity_funding.csv  humanitarian-response-plans.csv  inform_severity_cleaned.csv  inform_severity_master_2020_2025.csv
data/media/: AFG.csv  AGO.csv  ARM.csv  AZE.csv  BDI.csv  BEN.csv  BFA.csv  BGD.csv  BGR.csv  BLR.csv  BRA.csv  CAF.csv  CHL.csv  CMR.csv  COD.csv  COG.csv  COL.csv  CRI.csv  CUB.csv  CZE.csv  DJI.csv  DOM.csv  DZA.csv  ECU.csv  EGY.csv  ERI.csv  ESP.csv  EST.csv  ETH.csv  GHA.csv  GMB.csv  GNB.csv  GRC.csv  GTM.csv  HND.csv  HTI.csv  HUN.csv  IDN.csv  IND.csv  IRN.csv  (+63 more)
pages/: bias_analysis.py  dashboard.py  media_attention.py  stroopwafel.py
scratch/: .media_bias_cache.pkl  media_bias_demo.py  ukraine_demo.py  ukraine_overview.py
scripts/: prefetch_media.py
