[project]
name = "ocha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.1.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.45.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
    "gdeltdoc>=1.12.0",
    "google-cloud-bigquery>=3.41.0",
    "db-dtypes>=1.4.4",
    "anthropic>=0.40.0",
]
